RIP-44, splash page with dev-auth and build info

--- a/src/assets/styles/junction-global.scss
+++ b/src/assets/styles/junction-global.scss
@@ -52,9 +52,6 @@
 // Toolbox
 @import "toolbox";
 
-// Splash
-@import "splash";
-
 // Status pages: 404/sorry
 @import "status";
 
@@ -72,3 +69,12 @@
 
 // ETS-only services
 @import "junction";
+
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
