RIP-77, begin wiring up Mailing Lists; remove unused scss variables

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,4 +1,6 @@
-$bc-base-font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$body-font-color: #474747;
+$body-font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-size-root: 14px !default;
 $small-breakpoint: (767px);
 $medium-breakpoint: (1024px);
 $screen: "only screen";
