--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -6,10 +6,15 @@ $color-button-grey-border: #d0d0d0;
 $color-button-grey-gradient-1: #fefefe;
 $color-button-grey-gradient-2: #ececec;
 $color-button-grey-text: #464646;
+$color-button-primary-background: #3b7ea1;
+$color-button-primary-border: #265269;
+$color-button-primary-color: #fff;
+$color-button-primary-hover-background: #346f8e;
 $color-container-grey-border: #e5e5e5;
 $color-feature-icon-box-background: #f7f7f7;
 $color-feature-icon-box-border: #eee;
 $color-feature-icon-color: #cbcbcb;
+$color-grey: #ccc;
 $color-grey-area-border-dark: #d5d5d5;
 $color-grey-disabled: #aeaeae;
 $color-headers: #424242;
@@ -27,6 +32,7 @@ $color-red-button-border-selected: #4e191f;
 $color-red-button-border: #6c232b;
 $color-red-row-highlighted: #f2dddf;
 $color-very-light-grey: #ccc;
+$color-whisper: #eee;
 $color-white: #fff;
 $color-yellow-row-highlighted: #fefae4;
 
