RIP-77, continued front-end work on /mailing_lists; API calls w/ optional redirect on error

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -25,7 +25,7 @@ $color-orange-button-bg-selected: #a16e1e;
 $color-orange-button-bg: #c88926;
 $color-orange-button-border-selected: #553d0d;
 $color-orange-button-border: #705012;
-$color-primary: #007bff;
+$color-primary: #3ba1c4;
 $color-red-button-bg-selected: #89242a;
 $color-red-button-bg: #af333a;
 $color-red-button-border-selected: #4e191f;
