RIP-74, mini-refactor of front-end mailing list workflow

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -31,6 +31,7 @@ $color-red-button-bg: #af333a;
 $color-red-button-border-selected: #4e191f;
 $color-red-button-border: #6c232b;
 $color-red-row-highlighted: #f2dddf;
+$color-success: #dff0d8;
 $color-very-light-grey: #ccc;
 $color-whisper: #eee;
 $color-white: #fff;
