RIP-165 / RIP-168, get student canvas_id by UID; roster sort order

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -35,6 +35,7 @@ $color-success: #dff0d8;
 $color-very-light-grey: #ccc;
 $color-whisper: #eee;
 $color-white: #fff;
+$color-white-smoke: #f6f6f6;
 $color-yellow-row-highlighted: #fefae4;
 
 $primary-color: #2683bc;
