--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -2,6 +2,8 @@ $color-alert-background: #fef6e6;
 $color-alert-error-foreground: #b94a48;
 $color-black: #000;
 $color-body-black: #474747;
+$color-button-background: #f7f7f7;
+$color-button-border: #d1d1d1;
 $color-button-grey-border: #d0d0d0;
 $color-button-grey-gradient-1: #fefefe;
 $color-button-grey-gradient-2: #ececec;
@@ -10,6 +12,7 @@ $color-button-primary-background: #3b7ea1;
 $color-button-primary-border: #265269;
 $color-button-primary-color: #fff;
 $color-button-primary-hover-background: #346f8e;
+$color-container-grey-background: #edf0f2;
 $color-container-grey-border: #e5e5e5;
 $color-feature-icon-box-background: #f7f7f7;
 $color-feature-icon-box-border: #eee;
