RIP-189: fixes official sections UI issues

--- a/src/assets/styles/ripley-global.scss
+++ b/src/assets/styles/ripley-global.scss
@@ -1,6 +1,6 @@
 body {
-  background-color: #f6f6f6;
-  color: #474747;
+  background-color: #f6f6f6 !important;
+  color: #474747 !important;
   cursor: auto;
   font-family: Arial, sans-serif;
   font-style: normal;
