--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -24,6 +24,7 @@ $color-button-primary-color: #fff;
 $color-button-primary-hover-background: #346f8e;
 $color-container-grey-background: #edf0f2;
 $color-container-grey-border: #e5e5e5;
+$color-dark-tangerine: #f1a91e;
 $color-feature-icon-box-background: #f7f7f7;
 $color-feature-icon-box-border: #eee;
 $color-feature-icon-color: #cbcbcb;
