--- a/src/assets/styles/ripley-global.scss
+++ b/src/assets/styles/ripley-global.scss
@@ -6,6 +6,14 @@ body {
   font-style: normal;
   font-weight: normal;
   line-height: 1.5;
+  margin: 0;
+  overflow-x: hidden;
+  padding: 0;
+  position: relative;
+}
+
+html {
+  overflow-y: unset !important;
 }
 
 html, body {
