RIP-247, linear spinner? spinners gotta spin

--- a/src/assets/styles/ripley-global.scss
+++ b/src/assets/styles/ripley-global.scss
@@ -36,5 +36,8 @@ html, body {
     *.avoid-break-inside-when-print {
       page-break-inside: avoid;
     }
+    *.v-main-when-print {
+      padding: 0;
+    }
   }
 }
