--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,11 @@
-@use 'vuetify' with (
-  $color-pack: true
+@forward 'vuetify/styles' with (
+  $color-pack: true,
+  $grid-breakpoints: (
+    'xs': 0,
+    'sm': 576px,
+    'md': 768px,
+    'lg': 992px,
+    'xl': 1200px,
+    'xxl': 1950px,
+  )
 );
