RIP-315: unique IDs for official sections buttons

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,8 +1,8 @@
 $color-alert-background: #fef6e6;
 $color-alert-error-background: #f2dede;
 $color-alert-error-foreground: #b94a48;
-$color-alert-foreground: #bc8006;
-$color-alert-foreground-selected: #a07f46;
+$color-alert-foreground: #976707;
+$color-alert-foreground-selected: #876c3b;
 $color-alert-info-foreground: #3a87ad;
 $color-alert-info-background: #d9edf7;
 $color-alert-info-background-dark: #3a87ad;
@@ -30,7 +30,7 @@ $color-feature-icon-box-border: #eee;
 $color-feature-icon-color: #cbcbcb;
 $color-grey: #ccc;
 $color-grey-area-border-dark: #d5d5d5;
-$color-grey-disabled: #aeaeae;
+$color-grey-disabled: #757575;
 $color-headers: #424242;
 $color-help-link-blue: #2274a7;
 $color-item-group-item-border: #c1c7cf;
