RIP-344: cleans up user provision UI

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -42,9 +42,11 @@ $color-feature-icon-color: #cbcbcb;
 $color-grey: #ccc;
 $color-grey-area-border-dark: #d5d5d5;
 $color-grey-disabled: #757575;
+$color-harley-davidson-orange: #cf1715;
 $color-headers: #424242;
 $color-help-link-blue: #2274a7;
 $color-item-group-item-border: #c1c7cf;
+$color-nobel: #999;
 $color-off-black: #333;
 $color-orange-button-bg-selected: #a16e1e;
 $color-orange-button-bg: #c88926;
@@ -56,6 +58,7 @@ $color-red-button-bg: #af333a;
 $color-red-button-border-selected: #4e191f;
 $color-red-button-border: #6c232b;
 $color-red-row-highlighted: #f2dddf;
+$color-salem: #0d863d;
 $color-success: #dff0d8;
 $color-very-light-grey: #ccc;
 $color-whisper: #eee;
