--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -59,6 +59,10 @@ $color-red-button-border: #6c232b;
 $color-red-row-highlighted: #f2dddf;
 $color-salem: #0d863d;
 $color-success: #dff0d8;
+$color-table-border-grey: #d3dbe0;
+$color-table-header-border-grey: #ababab;
+$color-table-cell-border-grey: #d6d6d6;
+$color-table-cell-bg-grey: #f5f5f5;
 $color-very-light-grey: #ccc;
 $color-whisper: #eee;
 $color-white: #fff;
