--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -10,7 +10,9 @@ body {
   padding: 0;
   position: relative;
 }
-
+fieldset {
+  border: 0 !important;
+}
 html {
   overflow-y: unset !important;
 }
