--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -103,7 +103,7 @@ html, body {
       display: none;
     }
     *.avoid-break-inside-when-print {
-      page-break-inside: avoid;
+      break-inside: avoid-page;
     }
     *.v-main-when-print {
       padding: 0;
