--- a/public/canvas-customization/canvas-customization.css
+++ b/public/canvas-customization/canvas-customization.css
@@ -14,7 +14,7 @@
   margin-top: 25px;
 }
 
-/* CREATE A SITE */
+/* MANAGE SITES */
 
 #start_new_course {
   display: none !important;
@@ -76,7 +76,7 @@ form#ui-id-2[data-view='createUsers'] {
 
 /* HELP */
 
-/* Hide unneccesary Help links */
+/* Hide unnecessary Help links */
 #help-dialog #help-dialog-options li a[href="#teacher_feedback"],
 #help-dialog #help-dialog-options li a[href="#create_ticket"],
 #help-dialog #help-dialog-options li a[href="https://community.canvaslms.com/community/answers"] {
