--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -76,8 +76,14 @@ html, body {
   white-space: nowrap;
 }
 
+.font-size-15 {
+  font-size: 15px;
+}
 .font-size-16 {
   font-size: 16px;
+}
+.font-size-20 {
+  font-size: 20px;
 }
 
 .sr-only {
