--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -87,6 +87,9 @@ html, body {
 .font-size-16 {
   font-size: 16px;
 }
+.font-size-18 {
+  font-size: 18px;
+}
 .font-size-20 {
   font-size: 20px;
 }
