RIP-641: fixes color contrast on mailing list link

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -12,10 +12,10 @@ $color-alert-background: #fef6e6;
 $color-alert-error-background: #f2dede;
 $color-alert-error-foreground: #b94a48;
 $color-alert-foreground: #976707;
-$color-alert-info-foreground: #3a87ad;
+$color-alert-info-foreground: #367DA1;
 $color-alert-info-background: #d9edf7;
 $color-alert-success-background: #dff0d8;
-$color-alert-success-foreground: #468847;
+$color-alert-success-foreground: #437F4B;
 $color-body-black: #474747;
 $color-button-border: #d1d1d1;
 $color-container-grey-background: #edf0f2;
