--- a/public/canvas-customization/canvas-customization.css
+++ b/public/canvas-customization/canvas-customization.css
@@ -82,3 +82,30 @@ form#ui-id-2[data-view='createUsers'] {
 #help-dialog #help-dialog-options li a[href="https://community.canvaslms.com/community/answers"] {
   display:none;
 }
+
+/*********************************************************************/
+/***** BEGIN DESIGN TOOLS THEME IMPORT & CUSTOMIZATION  **************/
+/*********************************************************************/
+/* Import statements need to be at the top of your CSS file */
+/* For Main CSS file */
+@import url(https://designtools.ciditools.com/css/themes.css);
+/* For Mobile app CSS file */
+/*@import url(https://designtools.ciditools.com/css/app.css);*/
+/* Institution color customizations */
+@import url(https://designtools.ciditools.com/css/inst_theme_overrides.css);
+/* Theme Colors */
+:root {
+  --dt-color-primary: #003262;
+  --dt-color-primary-contrast: #FFFFFF;
+  --dt-color-primary-dark-text: #003262;
+  --dt-color-secondary: #FDB515;
+  --dt-color-secondary-contrast: #000000;
+  --dt-color-secondary-dark-text: #6C3302;
+  --dt-color-accent: #3B7EA1;
+  --dt-color-accent-contrast: #000000;
+  --dt-color-graybg: #EEEEEE;
+  --dt-color-graybg-contrast: #000000;
+}
+/*********************************************************************/
+/***** END DESIGN TOOLS HEME IMPORT & CUSTOMIZATION   ****************/
+/*********************************************************************/
