--- a/public/canvas-customization/canvas-customization.css
+++ b/public/canvas-customization/canvas-customization.css
@@ -1,28 +1,45 @@
 /*********************************************************************/
-/***** BEGIN DESIGN TOOLS THEME IMPORT & CUSTOMIZATION  **************/
+/***** BEGIN DESIGNPLUS THEME IMPORT & CUSTOMIZATION  ****************/
 /*********************************************************************/
 /* Import statements need to be at the top of your CSS file */
+
+/*** Legacy Sidebar ***/
 /* For Main CSS file */
 @import url(https://designtools.ciditools.com/css/themes.css);
 /* For Mobile app CSS file */
 /*@import url(https://designtools.ciditools.com/css/app.css);*/
 /* Institution color customizations */
 @import url(https://designtools.ciditools.com/css/inst_theme_overrides.css);
-/* Theme Colors */
+
+/*** New Sidebar ***/
+/* For Main CSS files */
+@import url(https://designplus.ciditools.com/css/content.css);
+@import url(https://designplus.ciditools.com/css/editor.css);
+/* For Mobile app CSS file */
+/*@import url(https://designplus.ciditools.com/css/mobile.css);*/
+
 :root {
-  --dt-color-primary: #003262;
-  --dt-color-primary-contrast: #FFFFFF;
-  --dt-color-primary-dark-text: #003262;
-  --dt-color-secondary: #FDB515;
-  --dt-color-secondary-contrast: #000000;
-  --dt-color-secondary-dark-text: #6C3302;
-  --dt-color-accent: #3B7EA1;
-  --dt-color-accent-contrast: #000000;
-  --dt-color-graybg: #EEEEEE;
-  --dt-color-graybg-contrast: #000000;
+    --dt-color-primary: #003262;
+    --dt-color-primary-contrast: #FFFFFF;
+    --dt-color-primary-dark-text: #003262;
+    --dt-color-secondary: #FDB515;
+    --dt-color-secondary-contrast: #000000;
+    --dt-color-secondary-dark-text: #6C3302;
+    --dt-color-accent: #3B7EA1;
+    --dt-color-accent-contrast: #000000;
+    --dt-color-accent-dark-text: #357094;
+    --dt-color-gray: #CCCCCC;
+    --dt-color-gray-contrast: #000000;
+    --dt-color-gray-dark-text: #636363;
+    --dt-color-white: #FFFFFF;
+    --dt-color-white-contrast: #000000;
+    --dt-color-white-dark-text: #707070;
+    --dt-color-graybg: #EEEEEE;
+    --dt-color-graybg-contrast: #000000;
 }
+
 /*********************************************************************/
-/***** END DESIGN TOOLS HEME IMPORT & CUSTOMIZATION   ****************/
+/***** END DESIGNPLUS THEME IMPORT & CUSTOMIZATION   *****************/
 /*********************************************************************/
 
 /* RIGHT SIDEBAR */
